=================== 0.1.83 ===================
*Re-Engine code 2
- All .h files moved to include folder
- Check oAuth Input
- And more minor fix...

=================== 0.1.82 ===================
*Re-Engine code 1
- New icons
- All .c files have comments
- Fix oauth function
- Fix fopen file
- And more minor fix...

=================== 0.1.81 ===================
* Twitter oAuth Security
- Disabled oAuth and Hidden Token
- Reset All Token (App And User)


=================== 0.1.80 ===================
* Twitter oAuth & GTK
- Improved: Send Tweet With GTK g_signal (beta)


=================== 0.1.78 ===================
* Twitter oAuth & GTK
- Testing: Send Tweet With GTK g_signal
- Optimized: String Functions 


=================== 0.1.70 ===================
* Twitter oAuth
- Testing: Send Tweet (work)
- Testing: oAuth General Functions


=================== 0.1.65 ===================
* MakeFiles
- Improved: Compile From MakeFiles
- Improved: Set Images
- Improved: New Compile Flags
 
 
=================== 0.1.60 ===================
* Twitter Login
- Improved: Request Token
- Improved: Access Token


=================== 0.1.50 ===================
* GTK Layout Test
- Improved: Layout


=================== 0.1.00 ===================
* Initalize Release
