@@ -41,6 +41,7 @@ typedef struct
 
 #define TWC_VERSION "0.1.83"
 #define TWC_VERSION_STATUS "-Alpha"
+#define TWC_UPDATES_URL "http://www.twitcrusader.org/version.php"
 #define ICON_SETTINGS ICONS_DIR"/setting.png"
 #define ICON_ABOUT ICONS_DIR"/tw_about.png"
 #define ICON_STAR ICONS_DIR"/star.png"
