@@ -2,6 +2,7 @@
 *Re-Engine code 2
 - All .h files moved to include folder
 - Check oAuth Input
+- Check Version (Updates)
 - And more minor fix...
 
 =================== 0.1.82 ===================
